--- a/package.json
+++ b/package.json
@@ -1,33 +1,42 @@
 {
-  "name": "brassy-pwa",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "apollo-boost": "^0.3.1",
-    "classnames": "^2.2.6",
-    "graphql": "^14.1.1",
-    "node-sass": "^4.11.0",
-    "react": "^16.8.4",
-    "react-apollo": "^2.5.2",
-    "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "prop-types": "^15.7.2"
-  }
+	"name": "brassy-pwa",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"apollo-boost": "^0.3.1",
+		"classnames": "^2.2.6",
+		"graphql": "^14.1.1",
+		"node-sass": "^4.11.0",
+		"react": "^16.8.4",
+		"react-apollo": "^2.5.2",
+		"react-dom": "^16.8.4",
+		"react-scripts": "2.1.8"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"coverage": "npm test -- --coverage && open coverage/lcov-report/index.html"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	],
+	"devDependencies": {
+		"prop-types": "^15.7.2",
+		"react-testing-library": "^6.0.0"
+	},
+	"jest": {
+		"collectCoverageFrom": [
+			"src/**/*.{js,jsx}",
+			"!src/**/index.js",
+			"!<rootDir>/path/to/dir/"
+		]
+	}
 }
