setup mocks & apollo hooks

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"graphql": "^14.1.1",
 		"node-sass": "^4.11.0",
 		"react": "^16.8.4",
-		"react-apollo": "^2.5.2",
+		"react-apollo-hooks": "^0.4.3",
 		"react-dom": "^16.8.4",
 		"react-scripts": "2.1.8"
 	},
@@ -29,8 +29,11 @@
 		"not op_mini all"
 	],
 	"devDependencies": {
+		"apollo-link-mock": "^1.0.1",
 		"prop-types": "^15.7.2",
-		"react-testing-library": "^6.0.0"
+		"react-testing-library": "^6.0.0",
+		"apollo-cache-inmemory": "^1.5.1",
+		"apollo-client": "^2.5.1"
 	},
 	"jest": {
 		"collectCoverageFrom": [
